Remove --illegal-access=permit since it does not work